feat: added devlopment infrastructure page

--- a/src/components/Hero/hero.module.scss
+++ b/src/components/Hero/hero.module.scss
@@ -11,7 +11,7 @@
 	background-size: cover;
 
 	// height: clamp(15rem, 50vi, 28rem);
-	min-height: 15rem;
+	min-height: 33dvh;
 
 	text-align: center;
 	color: var(--white);
@@ -28,7 +28,7 @@
 	}
 
 	h1 {
-		font-size: clamp(2.5rem, 3.75vi, 3.75rem);
+		font-size: clamp(1.75rem, 3.25vi, 2.75rem);
 		padding-block: 5rem;
 	}
 }
