--- a/src/components/socialShare/socialshare.module.scss
+++ b/src/components/socialShare/socialshare.module.scss
@@ -21,7 +21,7 @@
 
 		font-size: 1.15rem;
 
-		background-color: var(--_bg);
+		background: var(--_bg);
 		aspect-ratio: 1;
 		width: 1.75em;
 		border-radius: 50%;
